Refine hero layout: minimize content box, reduce min-height, fix overlap

--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ textarea {
   background-size: 20px 20px;
   background-color: #1a1a1a;
   height: 100vh;
-  min-height: 80rem;
+  min-height: 70rem;
   max-height: 120rem;
   position: relative;
   display: flex;
@@ -202,14 +202,16 @@ textarea {
   width: 92%;
   text-align: center;
   border: 2px solid #eaeaea;
-  padding: 3rem;
+  padding: 4rem;
   background: #1a1a1a;
   box-shadow: 8px 8px 0 0 #eaeaea;
+  position: relative;
+  z-index: 5;
 }
 .home-hero__profile-img-cont {
-  width: 22rem;
-  height: 22rem;
-  margin: 0 auto 4rem auto;
+  width: 18rem;
+  height: 18rem;
+  margin: 0 auto 3rem auto;
   position: relative;
   z-index: 10;
   border: 4px solid #eaeaea;
@@ -221,8 +223,8 @@ textarea {
 }
 @media only screen and (max-width: 37.5em) {
   .home-hero__profile-img-cont {
-    width: 18rem;
-    height: 18rem;
+    width: 16rem;
+    height: 16rem;
     border-width: 3px;
   }
 }
@@ -259,11 +261,11 @@ textarea {
   }
 }
 .home-hero__info {
-  margin: 2rem auto 4rem auto;
+  margin: 2rem auto 3rem auto;
   max-width: 60rem;
 }
 .home-hero__info .text-primary {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   color: #aaaaaa;
   line-height: 1.6;
   font-weight: 500;
@@ -275,11 +277,11 @@ textarea {
   }
 }
 .home-hero__cta {
-  margin-top: 4rem;
+  margin-top: 3rem;
 }
 .home-hero__mouse-scroll-cont {
   position: absolute;
-  bottom: 1rem;
+  bottom: 2rem;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -573,7 +575,7 @@ textarea {
 }
 
 .heading-primary {
-  font-size: 6rem;
+  font-size: 5rem;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 800;
@@ -581,12 +583,12 @@ textarea {
 }
 @media only screen and (max-width: 56.25em) {
   .heading-primary {
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
 }
 @media only screen and (max-width: 37.5em) {
   .heading-primary {
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
 }
 
